Fix layouts to have consistent page bottom margin
* Set default spacing to 20px / xl
* Remove extraneous padding from pages and let containers handle it
* Check if running cloud app to add extra bottom spacing
* Fix layout issues with connection Edit controls, move line rendering to the transformation cards
* Set "saving" state in create controls to use the create button instead of having a different UI

--- a/airbyte-webapp/src/components/common/MainPageWithScroll/MainPageWithScroll.module.scss
+++ b/airbyte-webapp/src/components/common/MainPageWithScroll/MainPageWithScroll.module.scss
@@ -9,6 +9,7 @@
 }
 
 .contentContainer {
+  flex: 1;
   max-width: 100%;
   overflow-x: auto;
   padding-top: variables.$spacing-lg;
@@ -19,4 +20,8 @@
   height: 100%;
   padding: 0 variables.$spacing-xl variables.$spacing-xl;
   min-width: variables.$main-page-content-min-width;
+
+  &.cloud {
+    padding-bottom: variables.$spacing-page-bottom-cloud;
+  }
 }
