--- a/airbyte-webapp/src/scss/_variables.scss
+++ b/airbyte-webapp/src/scss/_variables.scss
@@ -26,7 +26,7 @@ $spacing-md: 10px;
 $spacing-lg: 15px;
 $spacing-xl: 20px;
 $spacing-2xl: 40px;
-$spacing-page-bottom: 0;
+$spacing-page-bottom-cloud: 88px;
 $main-page-content-min-width: 960px;
 
 $width-size-menu: 93px;
